2004-03-21  Scott Dattalo  <scott AT dattalo.com>
	* src/pic/gen.c, src/pic/gen.h, src/pic/genarith.c, src/pic/pcode.c:
	Bit operands were not being handled properly in the pic14 port.
	(now src/regression/add.c passes again).

2004-03-20 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCC.y (labeled_statement): case and default no longer require
	a following statement (RFE #893037)

2004-03-19 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/mcs51/gen.c (pushSide, genSignedRightShift, genDjnz, geniPush):
	use MOVA macro to avoid "mov a,acc" when peephole optimizer is
	disabled (fixes bug #916294)
	* sim/ucsim/s51.src/mov.cc (inst_mov_a_addr): Throw an error on
	"mov a,acc"; patch provided by Lenny Story
	* device/include/mc68hc908gp32.h: header contibuted by Juan Gonzalez

2004-03-19 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/mcs51/gen.c (genFunction): optimize RECEIVE in reentrant
	functions
	* src/ds390/gen.c (genFunction, genEndFunction),
	* src/ds390/ralloc.c (ds390_assignRegisters),
	* src/mcs51/gen.c (genFunction, genEndFunction, mcs51_assignRegisters):
	* src/mcs51/ralloc.c (mcs51_assignRegisters): Skip optimizing registers
	pushed if there are parameters passed on the stack. Also, a cleaner
	way to decide if r0/r1 should be pushed/popped. (Together they fix
	bug #918693)

2004-03-18 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* doc/sdccman.lyx,
	* device/lib/mcs51/crtpagesfr.asm,
	* device/lib/mcs51/crtxinit.asm,
	* device/lib/mcs51/crtxstack.asm: Changed name of _PAGESFR to _XPAGE
	to avoid confusion with Si Lab's SFRPAGE register.

2004-03-17 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCglue.c (emitMaps): allow public sfr variables
	* src/SDCCglue.c (initialComments): include compiler build date
	with compiler version and put the timestamp of the generated
	assembly file on a serperate line to be less confusing.
	* src/port.h: added genInitStartup hook
	* src/avr/main.c,